--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,7 @@
 .container{
+    background-image: url("/assets/background.jpg");
+    background-size: cover;
+    background-repeat:no-repeat;
     border:1px solid black;
     padding: 10px;
 }
