--- a/styles/header.css
+++ b/styles/header.css
@@ -1,12 +1,31 @@
-.container{
+html, body {
+    margin: 0;
+    height: 100%;
+    width: auto;
+}
+.container {
+    display: flex;
+    flex-direction: column;
     background-image: url("/assets/background.jpg");
     background-size: cover;
     background-repeat:no-repeat;
-    border:1px solid black;
-    padding: 10px;
+    padding-top: 10px;
+    font-family: sans-serif;
 }
-.main-header{
-    border: 1px solid black;
+.main-header {
     text-align: center;
     margin-bottom: 10px;
+    background-color: lightgray;
+}
+#main-heading {
+    color: darkslategrey;
+}
+.top-navbar {
+    margin-right: 10px;
+}
+#subscribe {
+    float: right;
+}
+#subscribe:hover {
+    color: black;
 }
