--- a/styles/body.css
+++ b/styles/body.css
@@ -4,3 +4,11 @@
     padding-right: 30px;
 }
 
+#blog-details {
+    color:orangered;
+}
+
+.blog-content {
+    padding-left: 20px;
+    padding-right: 20px;
+}
