Add a subscribe form

--- a/styles/body.css
+++ b/styles/body.css
@@ -5,10 +5,11 @@
 }
 
 #blog-details {
-    color:orangered;
+    color: orangered;
 }
 
 .blog-content {
     padding-left: 20px;
     padding-right: 20px;
+    background-color: lightgray;
 }
